--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 resolver = "2"
 members = [
-  "libs/ballot-interpreter",
-  "libs/types-rs",
   "apps/mark-scan/accessible-controller",
+  "libs/ballot-interpreter",
+  "libs/pdi-rs",
+  "libs/types-rs",
 ]
 
 [workspace.dependencies]
