Create UiStringsApi type from API object
Grout is designed to infer the type from the API object literal, rather
than have a separate interface to define the type. This change removes
the need for a workaround to create the grout client type for the
UiStringsApi.

--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -100,6 +100,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@votingworks/backend": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
