--- a/libs/ui/tsconfig.build.json
+++ b/libs/ui/tsconfig.build.json
@@ -14,6 +14,7 @@
     "declaration": true
   },
   "references": [
+    { "path": "../backend/tsconfig.build.json" },
     { "path": "../ballot-encoder/tsconfig.build.json" },
     { "path": "../backend/tsconfig.build.json" },
     { "path": "../basics/tsconfig.build.json" },
