--- a/libs/utils/.eslintrc.json
+++ b/libs/utils/.eslintrc.json
@@ -6,7 +6,7 @@
     // Allow for variable naming with "CVR"
     "vx/gts-identifiers": [
       "error",
-      { "allowedNames": ["/CVR.*/", "/buildCVR.*/"] }
+      { "allowedNames": ["/CVR.*/", "/buildCVR.*/", "toJSON"] }
     ]
   }
 }
