chore: replace `lodash` uses
Removes dependencies on the entire `lodash` library. Where we don't have a good alternative, depends on the specific lodash functions we want e.g. `lodash.isequal`. This will help encourage the use of the built-in collection types or `iter` from `@votingworks/basics`.

--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -62,7 +62,8 @@
     "dompurify": "^2.0.12",
     "i18next": "^23.5.1",
     "i18next-parser": "^7.9.0",
-    "lodash": "^4.17.20",
+    "lodash.sample": "^4.2.1",
+    "lodash.samplesize": "^4.2.0",
     "luxon": "^3.0.0",
     "normalize.css": "^8.0.1",
     "pluralize": "8.0.0",
@@ -90,7 +91,8 @@
     "@types/i18next": "^13.0.0",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash.sample": "^4.2.9",
+    "@types/lodash.samplesize": "^4.2.9",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/pluralize": "^0.0.29",
