--- a/apps/central-scan/frontend/package.json
+++ b/apps/central-scan/frontend/package.json
@@ -64,7 +64,7 @@
     "fast-text-encoding": "^1.0.2",
     "http-proxy-middleware": "1.0.6",
     "js-file-download": "0.4.12",
-    "lodash": "^4.17.20",
+    "lodash.isequal": "^4.5.0",
     "moment": "2.29.1",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
@@ -89,7 +89,7 @@
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "16.18.23",
     "@types/pify": "^3.0.2",
     "@types/pluralize": "^0.0.29",
