--- a/libs/basics/package.json
+++ b/libs/basics/package.json
@@ -35,7 +35,7 @@
     "util": "^0.12.4"
   },
   "devDependencies": {
-    "@types/deep-eql": "workspace:*",
+    "@types/deep-eql": "^4.0.2",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
     "eslint-plugin-vx": "workspace:*",
