chore: replace `lodash` uses (#4409)
* chore: replace `lodash` uses

Removes dependencies on the entire `lodash` library. Where we don't have a good alternative, depends on the specific lodash functions we want e.g. `lodash.isequal`. This will help encourage the use of the built-in collection types or `iter` from `@votingworks/basics`.

* fix(cvr-fixture-generator): remove outdated comment

* refactor(basics): provide `deep-eql` as `deepEqual`

Replaces `lodash.isequal` with `deep-eql` by re-exporting it from `@votingworks/basics`. I chose `deep-eql` over `lodash.isequal` because the former seems to be more actively maintained and they're similarly popular (8M vs 10M weekly downloads). The last release of `lodash.isequal` was 7 years ago.

--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -41,7 +41,8 @@
     "debug": "4.3.4",
     "fast-text-encoding": "^1.0.2",
     "jszip": "^3.9.1",
-    "lodash": "^4.17.20",
+    "lodash.merge": "^4.6.2",
+    "lodash.setwith": "^4.3.2",
     "luxon": "^3.0.0",
     "moment": "2.29.1",
     "randombytes": "^2.1.0",
@@ -55,7 +56,8 @@
     "@types/fast-text-encoding": "^1.0.1",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash.merge": "^4.6.9",
+    "@types/lodash.setwith": "^4.3.9",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/randombytes": "^2.0.0",
