--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -58,11 +58,11 @@
     "@yornaath/batshit": "^0.9.0",
     "base64-js": "1.5.1",
     "debug": "4.3.4",
-    "deep-eql": "4.1.3",
     "dompurify": "^2.0.12",
     "i18next": "^23.5.1",
     "i18next-parser": "^7.9.0",
-    "lodash": "^4.17.20",
+    "lodash.sample": "^4.2.1",
+    "lodash.samplesize": "^4.2.0",
     "luxon": "^3.0.0",
     "normalize.css": "^8.0.1",
     "pluralize": "8.0.0",
@@ -84,13 +84,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/base64-js": "^1.3.0",
     "@types/debug": "4.1.8",
-    "@types/deep-eql": "workspace:*",
     "@types/dompurify": "^2.0.3",
     "@types/history": "4.7.11",
     "@types/i18next": "^13.0.0",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash.sample": "^4.2.9",
+    "@types/lodash.samplesize": "^4.2.9",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/pluralize": "^0.0.29",
