--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -57,6 +57,7 @@
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
+    "micromatch": "^4.0.5",
     "multer": "^1.4.5-lts.1",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
@@ -72,6 +73,7 @@
     "@types/jest": "^29.5.3",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
+    "@types/micromatch": "^4.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "16.18.23",
     "@types/supertest": "^2.0.10",
