--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -42,6 +42,7 @@
     "fast-text-encoding": "^1.0.2",
     "jszip": "^3.9.1",
     "lodash": "^4.17.20",
+    "lodash.setwith": "^4.3.2",
     "luxon": "^3.0.0",
     "moment": "2.29.1",
     "randombytes": "^2.1.0",
@@ -56,6 +57,7 @@
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash": "^4.14.168",
+    "@types/lodash.setwith": "^4.3.9",
     "@types/luxon": "^3.0.0",
     "@types/node": "16.18.23",
     "@types/randombytes": "^2.0.0",
