--- a/libs/auth/package.json
+++ b/libs/auth/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/db": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
