--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,26 @@
 [workspace]
+resolver = "2"
+members = ["libs/ballot-interpreter", "libs/types-rs"]
 
-members = ["libs/ballot-interpreter"]
+[workspace.dependencies]
+base64 = "0.21.4"
+bitter = "0.6.1"
+clap = { version = "4.0.29", features = ["cargo"] }
+hex = "0.4.3"
+image = "0.24.5"
+imageproc = "0.23.0"
+itertools = "0.10.5"
+log = "0.4.17"
+logging_timer = "1.1.0"
+neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+pretty_env_logger = "0.4.0"
+proptest = "1.0.0"
+rayon = "1.5.3"
+rqrr = "0.6.0"
+rusttype = "0.9.3"
+serde = { version = "1.0.150", features = ["derive"] }
+serde_json = "1.0.89"
+tempfile = "3.3.0"
+thiserror = "1.0.50"
+types-rs = { path = "libs/types-rs" }
+zbar-rust = "0.0.21"
