--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,16 @@
 [workspace]
 resolver = "2"
-members = ["libs/ballot-interpreter", "libs/types-rs", "apps/mark-scan/accessible-controller"]
+members = [
+  "libs/ballot-interpreter",
+  "libs/types-rs",
+  "apps/mark-scan/accessible-controller",
+]
 
 [workspace.dependencies]
 base64 = "0.21.4"
 bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo"] }
+crc16 = "0.4.0"
 hex = "0.4.3"
 image = "0.24.5"
 imageproc = "0.23.0"
@@ -13,6 +18,7 @@ itertools = "0.10.5"
 log = "0.4.17"
 logging_timer = "1.1.0"
 neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+num_enum = "0.7.1"
 pretty_env_logger = "0.4.0"
 proptest = "1.0.0"
 rayon = "1.5.3"
@@ -20,7 +26,9 @@ rqrr = "0.6.0"
 rusttype = "0.9.3"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
+serialport = "4.2.2"
 tempfile = "3.3.0"
 thiserror = "1.0.50"
 types-rs = { path = "libs/types-rs" }
+uinput = "0.1.3"
 zbar-rust = "0.0.21"
