--- a/apps/mark-scan/accessible-controller/Cargo.toml
+++ b/apps/mark-scan/accessible-controller/Cargo.toml
@@ -8,8 +8,8 @@ name = "controllerd"
 path = "src/controllerd.rs"
 
 [dependencies]
-crc16 = "0.4.0"
-num_enum = "0.7.1"
-serialport = "4.2.2"
-thiserror = "1.0.50"
-uinput = "0.1.3"
+crc16 = { workspace = true }
+num_enum = { workspace = true }
+serialport = { workspace = true }
+thiserror = { workspace = true }
+uinput = { workspace = true }
