--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -60,6 +60,7 @@
     "@types/debug": "4.1.8",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/node-quirc": "workspace:*",
     "@types/tmp": "0.2.4",
@@ -72,6 +73,7 @@
     "fs-extra": "11.1.1",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
