Proof of concept: render tally report to PDF on the backend

--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -45,6 +45,7 @@
     "@votingworks/hmpb-layout": "workspace:*",
     "@votingworks/hmpb-render-backend": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
     "dotenv": "16.3.1",
@@ -53,8 +54,10 @@
     "fs-extra": "11.1.1",
     "jszip": "^3.9.1",
     "pdfkit": "^0.13.0",
+    "playwright": "^1.40.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.11",
     "svg-to-pdfkit": "^0.1.8",
     "uuid": "9.0.1",
     "zod": "3.14.4"
@@ -69,6 +72,7 @@
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
     "@types/svg-to-pdfkit": "^0.1.0",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
