--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -53,6 +53,7 @@
     "express": "4.18.2",
     "fs-extra": "11.1.1",
     "jszip": "^3.9.1",
+    "mime": "^3.0.0",
     "pdfkit": "^0.13.0",
     "playwright": "^1.40.1",
     "react": "18.2.0",
@@ -68,6 +69,7 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/mime": "^2.0.3",
     "@types/node": "16.18.23",
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
