--- a/docs/exercises/package.json
+++ b/docs/exercises/package.json
@@ -41,5 +41,6 @@
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1"
-  }
+  },
+  "packageManager": "pnpm@8.1.0"
 }
