--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -64,6 +64,7 @@
     "esbuild-runner": "2.2.2",
     "js-file-download": "0.4.12",
     "luxon": "^3.0.0",
+    "nanoid": "^3.3.7",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "18.2.0",
