--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1015,6 +1015,29 @@ jobs:
       - store_test_results:
           path: libs/monorepo-utils/reports/
 
+  # @votingworks/printing
+  test-libs-printing:
+    executor: nodejs
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            pnpm --dir libs/printing build
+      - run:
+          name: Lint
+          command: |
+            pnpm --dir libs/printing lint
+      - run:
+          name: Test
+          command: |
+            pnpm --dir libs/printing test
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: ./reports/
+      - store_test_results:
+          path: libs/printing/reports/
+
   # @votingworks/res-to-ts
   test-libs-res-to-ts:
     executor: nodejs
@@ -1235,6 +1258,7 @@ workflows:
       - test-libs-mark-flow-ui
       - test-libs-message-coder
       - test-libs-monorepo-utils
+      - test-libs-printing
       - test-libs-res-to-ts
       - test-libs-test-utils
       - test-libs-types
