--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -44,7 +44,9 @@
     "@votingworks/grout": "workspace:*",
     "@votingworks/hmpb-layout": "workspace:*",
     "@votingworks/hmpb-render-backend": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
     "dotenv": "16.3.1",
@@ -65,6 +67,7 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
@@ -81,6 +84,7 @@
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
