--- a/apps/design/backend/tsconfig.json
+++ b/apps/design/backend/tsconfig.json
@@ -27,6 +27,7 @@
     { "path": "../../../libs/hmpb/layout/tsconfig.build.json" },
     { "path": "../../../libs/hmpb/render-backend/tsconfig.build.json" },
     { "path": "../../../libs/image-utils/tsconfig.build.json" },
+    { "path": "../../../libs/test-utils/tsconfig.build.json" },
     { "path": "../../../libs/types/tsconfig.build.json" },
     { "path": "../../../libs/utils/tsconfig.build.json" }
   ]
