--- a/libs/image-utils/package.json
+++ b/libs/image-utils/package.json
@@ -25,7 +25,8 @@
     "@votingworks/utils": "workspace:*",
     "canvas": "2.9.1",
     "debug": "4.3.4",
-    "pdfjs-dist": "2.3.200"
+    "pdfjs-dist": "2.3.200",
+    "tmp": "^0.2.1"
   },
   "lint-staged": {
     "*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)": [
@@ -42,6 +43,7 @@
     "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/node": "16.18.23",
     "@types/pdfjs-dist": "2.1.3",
     "@types/tmp": "0.2.4",
@@ -51,10 +53,10 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
-    "tmp": "^0.2.1",
     "ts-jest": "29.1.1"
   }
 }
