--- a/libs/hmpb/layout/package.json
+++ b/libs/hmpb/layout/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^29.5.3",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@votingworks/fixtures": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
