--- a/libs/hmpb/layout/tsconfig.json
+++ b/libs/hmpb/layout/tsconfig.json
@@ -14,6 +14,7 @@
   "references": [
     { "path": "../../../libs/ballot-encoder/tsconfig.build.json" },
     { "path": "../../../libs/basics/tsconfig.build.json" },
+    { "path": "../../../libs/fixtures/tsconfig.build.json" },
     { "path": "../../../libs/types/tsconfig.build.json" }
   ]
 }
