--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
 [workspace.dependencies]
 base64 = "0.21.4"
 bitter = "0.6.1"
-clap = { version = "4.0.29", features = ["cargo"] }
+clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
+color-eyre = "0.6.2"
 crc16 = "0.4.0"
 hex = "0.4.3"
 image = "0.24.5"
@@ -19,6 +20,7 @@ itertools = "0.10.5"
 log = "0.4.17"
 logging_timer = "1.1.0"
 neon = { version = "0.10", default-features = false, features = ["napi-6"] }
+neon-serde3 = "0.10.0"
 num_enum = "0.7.1"
 pretty_env_logger = "0.4.0"
 proptest = "1.0.0"
@@ -30,6 +32,8 @@ serde_json = "1.0.89"
 serialport = "4.2.2"
 tempfile = "3.3.0"
 thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
 zbar-rust = "0.0.21"
