--- a/apps/scan/backend/tsconfig.build.json
+++ b/apps/scan/backend/tsconfig.build.json
@@ -25,6 +25,7 @@
     { "path": "../../../libs/grout/tsconfig.build.json" },
     { "path": "../../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../../libs/logging/tsconfig.build.json" },
+    { "path": "../../../libs/pdi-rs/tsconfig.build.json" },
     { "path": "../../../libs/test-utils/tsconfig.build.json" },
     { "path": "../../../libs/types/tsconfig.build.json" },
     { "path": "../../../libs/usb-drive/tsconfig.build.json" },
