--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,22 @@ members = [
 ab_glyph = "0.2.23"
 base64 = "0.22.0"
 bitter = "0.6.1"
-clap = { version = "4.0.29", features = ["cargo"] }
+clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
 color-eyre = "0.6.2"
 crc16 = "0.4.0"
+csv = "1.3.0"
 ctrlc = "3.4.2"
 hex = "0.4.3"
 image = "0.25.0"
 imageproc = "0.24.0"
 itertools = "0.12.1"
+libc = "0.2.153"
 log = "0.4.17"
 vx-logging = { path = "libs/logging" }
 daemon-utils = { path = "apps/mark-scan/daemon-utils" }
 logging_timer = "1.1.0"
 neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
+neon-serde3 = "0.10.0"
 num_enum = "0.7.1"
 pretty_env_logger = "0.5.0"
 proptest = "1.0.0"
@@ -37,6 +40,8 @@ serde_json = "1.0.89"
 serialport = "4.2.2"
 tempfile = "3.3.0"
 thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 types-rs = { path = "libs/types-rs" }
 uinput = "0.1.3"
 zbar-rust = "0.0.23"
