libs/printing printer handling

--- a/libs/printing/package.json
+++ b/libs/printing/package.json
@@ -34,19 +34,25 @@
   "dependencies": {
     "@votingworks/basics": "workspace:*",
     "@votingworks/fixtures": "workspace:*",
+    "@votingworks/test-utils": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/ui": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
+    "moment": "2.29.1",
     "playwright": "^1.40.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "tmp": "^0.2.1",
+    "tmp-promise": "^3.0.3",
+    "zod": "3.14.4"
   },
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
+    "@types/memorystream": "^0.3.4",
     "@types/node": "16.18.23",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
@@ -62,8 +68,8 @@
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
+    "memorystream": "^0.3.1",
     "sort-package-json": "^1.50.0",
-    "tmp": "^0.2.1",
     "ts-jest": "29.1.1"
   },
   "packageManager": "pnpm@8.1.0"
