--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^5.0.1",
     "@google-cloud/translate": "^8.0.2",
+    "@votingworks/backend": "workspace:*",
     "@votingworks/basics": "workspace:*",
     "@votingworks/db": "workspace:*",
     "@votingworks/grout": "workspace:*",
