--- a/libs/printing/tsconfig.json
+++ b/libs/printing/tsconfig.json
@@ -20,7 +20,10 @@
   "references": [
     { "path": "../basics/tsconfig.build.json" },
     { "path": "../eslint-plugin-vx/tsconfig.build.json" },
+    { "path": "../fixtures/tsconfig.build.json" },
     { "path": "../image-utils/tsconfig.build.json" },
+    { "path": "../logging/tsconfig.build.json" },
+    { "path": "../test-utils/tsconfig.build.json" },
     { "path": "../types/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" },
     { "path": "../utils/tsconfig.build.json" }
