--- a/apps/scan/backend/package.json
+++ b/apps/scan/backend/package.json
@@ -18,9 +18,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "start": "node ./build/index.js",
-    "test": "is-ci test:ci test:watch",
+    "test": "TZ=UTC is-ci test:ci test:watch",
     "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=2 # VxScan backend tests (which involve lots of polling and I/O operations) get flaky when we set --maxWorkers higher",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "TZ=UTC jest --coverage",
     "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
     "test:watch": "jest --watch",
     "type-check": "tsc --build"
@@ -50,8 +50,10 @@
     "@votingworks/grout": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
@@ -62,6 +64,7 @@
     "got": "^11.8.2",
     "js-sha256": "^0.9.0",
     "luxon": "^3.0.0",
+    "pdfjs-dist": "2.3.200",
     "rxjs": "7.8.1",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
@@ -74,9 +77,11 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/luxon": "^3.0.0",
     "@types/multer": "^1.4.7",
     "@types/node": "16.18.23",
+    "@types/pdfjs-dist": "2.1.3",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
@@ -86,6 +91,7 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
