--- a/apps/scan/backend/tsconfig.json
+++ b/apps/scan/backend/tsconfig.json
@@ -32,8 +32,10 @@
     { "path": "../../../libs/grout/tsconfig.build.json" },
     { "path": "../../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../../libs/logging/tsconfig.build.json" },
+    { "path": "../../../libs/printing/tsconfig.build.json" },
     { "path": "../../../libs/test-utils/tsconfig.build.json" },
     { "path": "../../../libs/types/tsconfig.build.json" },
+    { "path": "../../../libs/ui/tsconfig.build.json" },
     { "path": "../../../libs/usb-drive/tsconfig.build.json" },
     { "path": "../../../libs/utils/tsconfig.build.json" }
   ]
