--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -99,6 +99,7 @@
     "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/scan-backend": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
