--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -57,6 +57,8 @@
     "luxon": "^3.0.0",
     "micromatch": "^4.0.5",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
+    "object-hash": "^3.0.0",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
     "zip-stream": "^4.1.0",
@@ -74,6 +76,7 @@
     "@types/micromatch": "^4.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "16.18.23",
+    "@types/object-hash": "^3.0.6",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
