--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -54,6 +54,7 @@
     "dotenv-expand": "9.0.0",
     "express": "4.18.2",
     "fs-extra": "11.1.1",
+    "js-sha256": "^0.9.0",
     "jszip": "^3.9.1",
     "pdfkit": "^0.13.0",
     "react": "18.2.0",
