--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -70,6 +70,7 @@
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
     "@types/jest-image-snapshot": "^6.4.0",
+    "@types/lodash.get": "^4.4.9",
     "@types/node": "16.18.23",
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
@@ -90,6 +91,7 @@
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
+    "lodash.get": "^4.4.2",
     "nodemon": "^2.0.20",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
