Add <WithAudio> wrapper and use in <UiString>

--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -61,6 +61,7 @@
     "dompurify": "^2.0.12",
     "i18next": "^23.5.1",
     "i18next-parser": "^7.9.0",
+    "lodash.get": "^4.4.2",
     "lodash.sample": "^4.2.1",
     "lodash.samplesize": "^4.2.0",
     "luxon": "^3.0.0",
@@ -88,6 +89,7 @@
     "@types/i18next": "^13.0.0",
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
+    "@types/lodash.get": "^4.4.9",
     "@types/lodash.sample": "^4.2.9",
     "@types/lodash.samplesize": "^4.2.9",
     "@types/luxon": "^3.0.0",
