--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -69,6 +69,7 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flip-toolkit": "^7.1.0",
     "react-router-dom": "^5.3.4",
     "styled-components": "^5.3.11",
     "util": "^0.12.4"
