--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -52,6 +52,7 @@
     "js-sha256": "^0.9.0",
     "jszip": "^3.9.1",
     "lodash.merge": "^4.6.2",
+    "luxon": "^3.0.0",
     "micromatch": "^4.0.5",
     "readline": "^1.3.0",
     "stream-chain": "^2.2.5",
@@ -67,6 +68,7 @@
     "@types/jest": "^29.5.3",
     "@types/lodash.merge": "^4.6.9",
     "@types/lodash.set": "^4.3.7",
+    "@types/luxon": "^3.0.0",
     "@types/micromatch": "^4.0.2",
     "@types/node": "16.18.23",
     "@types/stream-chain": "^2.0.1",
