--- a/libs/backend/package.json
+++ b/libs/backend/package.json
@@ -59,6 +59,7 @@
     "stream-chopper": "^3.0.1",
     "stream-json": "^1.7.5",
     "tmp": "^0.2.1",
+    "usb": "^2.6.0",
     "uuid": "9.0.1",
     "zod": "3.14.4"
   },
