--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
 color-eyre = "0.6.2"
 crc16 = "0.4.0"
+csv = "1.3.0"
 ctrlc = "3.4.2"
 hex = "0.4.3"
 image = "0.24.5"
