Add ToneJS wrapper implementation of the AudioPlayer interface

--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -73,6 +73,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.7.4",
+    "tone": "^14.7.77",
     "use-interval": "1.4.0",
     "zod": "3.14.4"
   },
