--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -40,12 +40,14 @@
     "@votingworks/fixtures": "workspace:*",
     "@votingworks/hmpb-layout": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:^",
     "@xmldom/xmldom": "^0.8.1",
     "js-sha256": "^0.9.0",
     "pdfkit": "^0.13.0",
     "playwright": "^1.40.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.11",
     "svg-to-pdfkit": "^0.1.8"
   },
   "devDependencies": {
@@ -55,6 +57,7 @@
     "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
     "@types/svg-to-pdfkit": "^0.1.0",
     "@types/tmp": "0.2.4",
     "esbuild": "0.17.11",
