--- a/libs/hmpb/render-backend/tsconfig.build.json
+++ b/libs/hmpb/render-backend/tsconfig.build.json
@@ -14,6 +14,7 @@
     { "path": "../../../libs/basics/tsconfig.build.json" },
     { "path": "../../../libs/eslint-plugin-vx/tsconfig.build.json" },
     { "path": "../../../libs/fixtures/tsconfig.build.json" },
-    { "path": "../../../libs/types/tsconfig.build.json" }
+    { "path": "../../../libs/types/tsconfig.build.json" },
+    { "path": "../../../libs/ui/tsconfig.build.json" }
   ]
 }
