--- a/apps/mark-scan/accessible-controller/Cargo.toml
+++ b/apps/mark-scan/accessible-controller/Cargo.toml
@@ -9,7 +9,10 @@ path = "src/controllerd.rs"
 
 [dependencies]
 crc16 = { workspace = true }
+ctrlc = { workspace = true }
 num_enum = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 serialport = { workspace = true }
 thiserror = { workspace = true }
 uinput = { workspace = true }
