--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -55,6 +55,7 @@
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "lodash.memoize": "^4.1.2",
+    "lru_map": "^0.4.1",
     "luxon": "^3.0.0",
     "micromatch": "^4.0.5",
     "multer": "^1.4.5-lts.1",
