--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -54,9 +54,12 @@
     "express": "4.18.2",
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
+    "lodash.memoize": "^4.1.2",
+    "lru_map": "^0.4.1",
     "luxon": "^3.0.0",
     "micromatch": "^4.0.5",
     "multer": "^1.4.5-lts.1",
+    "object-hash": "^3.0.0",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
     "zip-stream": "^4.1.0",
@@ -69,11 +72,13 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/lodash.memoize": "^4.1.9",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
     "@types/micromatch": "^4.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "16.18.23",
+    "@types/object-hash": "^3.0.6",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
