generate log id types from toml

--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -14,6 +14,8 @@
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json",
     "build:generate-docs": "pnpx esbuild-runner --cache ./scripts/generate_documentation.ts",
+    "build:generate-types": "pnpx esbuild-runner ./scripts/generate_types_from_toml.ts && eslint src/log_event_ids.ts --fix",
+    "generate-toml": "pnpx esbuild-runner ./scripts/generate_event_id_toml.ts",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
@@ -38,10 +40,13 @@
     ]
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "@types/lodash": "^4.14.202",
     "@votingworks/basics": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
+    "lodash": "^4.17.21",
     "yargs": "17.7.1",
     "zod": "3.14.4"
   },
