--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json && pnpm build:app-strings-catalog",
-    "build:app-strings-catalog": "i18next",
-    "check:app-strings-catalog": "i18next --fail-on-update || (echo && echo 'Run `pnpm build:app-strings-catalog` to fix' && echo && exit 1)",
+    "build:app-strings-catalog": "i18next && ./scripts/finalize-app-strings-catalog",
+    "check:app-strings-catalog": "./scripts/check-app-strings-catalog",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint . && pnpm stylelint:run && pnpm check:app-strings-catalog",
     "lint:fix": "pnpm type-check && eslint . --fix && stylelint:run:fix",
@@ -35,7 +35,7 @@
       "stylelint --quiet --fix",
       "eslint --quiet --fix"
     ],
-    "app_strings.tsx": [
+    "(app_strings.tsx|number_strings.ts)": [
       "pnpm build:app-strings-catalog"
     ],
     "package.json": [
@@ -111,6 +111,8 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "esbuild": "0.17.11",
+    "esbuild-runner": "2.2.2",
     "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-vx": "workspace:*",
     "events": "3.3.0",
