--- a/libs/pdi-rs/Cargo.toml
+++ b/libs/pdi-rs/Cargo.toml
@@ -32,6 +32,7 @@ path = "src/parse_traffic.rs"
 
 [dependencies]
 anyhow = "1.0.75"
+bitter = { workspace = true }
 chrono = "0.4.31"
 clap = { workspace = true }
 color-eyre = { workspace = true }
