Set up pdfjs-dist and react-pdf

--- a/.npmrc
+++ b/.npmrc
@@ -10,6 +10,7 @@ hoist = false
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
 public-hoist-pattern[]=*stylelint*
+public-hoist-pattern[]=*pdfjs-dist*
 
 auto-install-peers=true
 
