--- a/libs/pdi-rs/Cargo.toml
+++ b/libs/pdi-rs/Cargo.toml
@@ -2,30 +2,13 @@
 name = "pdi-rs"
 version = "0.1.0"
 edition = "2021"
-exclude = ["build/rust_addon.node"]
-
-[lib]
-crate-type = ["cdylib"]
-path = "src/lib.rs"
 
 [[bin]]
-name = "pdi"
+name = "pdictl"
 path = "src/main.rs"
 
 [[bin]]
-name = "custom-get-status"
-path = "src/get_custom_status.rs"
-
-[[bin]]
-name = "pdi-get-status"
-path = "src/get_pdi_status.rs"
-
-[[bin]]
-name = "libusb-example"
-path = "src/libusb_example.rs"
-
-[[bin]]
-name = "parse-traffic"
+name = "pdi-parse-traffic"
 path = "src/parse_traffic.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -43,9 +26,6 @@ image = { version = "0.24.7", default-features = false, features = [
     "bmp",
     "jpeg",
 ] }
-lazy_static = "1.4.0"
-neon = { workspace = true }
-neon-serde3 = { workspace = true }
 nom = "7.1.3"
 psutil = "3.3.0"
 rand = "0.8.5"
