--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "libs/logging",
   "libs/types-rs",
   "apps/mark-scan/accessible-controller",
+  "apps/mark-scan/pat-device-input",
 ]
 
 [workspace.dependencies]
@@ -12,6 +13,7 @@ base64 = "0.21.4"
 bitter = "0.6.1"
 clap = { version = "4.0.29", features = ["cargo"] }
 crc16 = "0.4.0"
+ctrlc = "3.4.2"
 hex = "0.4.3"
 image = "0.24.5"
 imageproc = "0.23.0"
