fix: use `pnpm esr` instead of `pnpx esbuild-runner`
The former goes and downloads `esbuild-runner` from NPM, the latter runs an `esr` binary from an already-installed package (i.e. `esbuild-runner`).

--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json",
-    "build:generate-docs": "pnpx esbuild-runner --cache ./scripts/generate_documentation.ts",
-    "build:generate-log-details": "pnpx esbuild-runner ./scripts/generate_types_from_toml.ts && eslint src/log_event_ids.ts --fix && pnpx esbuild-runner ./scripts/generate_rust_enums_from_toml.ts && rustfmt types-rust/src/log_event_enums.rs",
+    "build:generate-docs": "pnpm esr --cache ./scripts/generate_documentation.ts",
+    "build:generate-log-details": "pnpm esr --cache ./scripts/generate_types_from_toml.ts && eslint src/log_event_ids.ts --fix && pnpm esr --cache ./scripts/generate_rust_enums_from_toml.ts",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
