--- a/libs/pdi-rs/Cargo.toml
+++ b/libs/pdi-rs/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/tui/main.rs"
 
 [dependencies]
 anyhow = "1.0.75"
+base64 = { workspace = true }
 bitter = { workspace = true }
 chrono = "0.4.31"
 clap = { workspace = true }
