Generate Rust/TS log types from TOML (#4563)
* add Typescript type generation script

* add supporting files for typescript type generator

* move foundational types to base_types

It was becoming easy to introduce dependency cycles in generated code. While this
convention doesn't prevent cycles (eslint should already do that),
it hopefully makes it more clear which types can be used by generated
code.

* add log event ID config TOML file

* add Rust enum generation script

* add Rust logging crate

* update readme and add generated log artifacts

* Suggestions for #4563 (#4573)

* perf: use streams where possible

* feat: format generated Rust file

* fix: use file-level documentation comment style

Also fixes the name of the pnpm script.

* fix: use `pnpm esr` instead of `pnpx esbuild-runner`

The former goes and downloads `esbuild-runner` from NPM, the latter runs an `esr` binary from an already-installed package (i.e. `esbuild-runner`).

* use dirname

* move log_event_details.toml to root

* add --check option to typescript type gen

* add --check option to rust type gen

* use streaming for ts typegen

---------

Co-authored-by: Brian Donovan <1938+eventualbuddha@users.noreply.github.com>

--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -13,14 +13,17 @@
   "scripts": {
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json",
-    "build:generate-docs": "pnpx esbuild-runner --cache ./scripts/generate_documentation.ts",
+    "build:generate-docs": "pnpm esr --cache ./scripts/generate_documentation.ts",
+    "build:generate-typescript-types": "pnpm esr --cache ./scripts/generate_types_from_toml.ts",
+    "build:generate-rust-types": "pnpm esr --cache ./scripts/generate_rust_enums_from_toml.ts",
+    "build:generate-types": "pnpm build:generate-typescript-types && pnpm build:generate-rust-types",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
     "test:watch": "TZ=UTC jest --watch",
     "test:coverage": "TZ=UTC jest --coverage",
-    "test:ci": "TZ=UTC pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:ci": "TZ=UTC pnpm build && pnpm test:coverage --reporters=default --reporters=jest-junit --maxWorkers=6 && pnpm build:generate-typescript-types --check && pnpm build:generate-rust-types --check",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
@@ -38,6 +41,7 @@
     ]
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "@votingworks/basics": "workspace:*",
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
