frontend: add pdf viewer

--- a/apps/admin/frontend/.eslintrc.json
+++ b/apps/admin/frontend/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": ["plugin:vx/react"],
+  "ignorePatterns": ["public/pdf.worker.min.js"],
   "rules": {
     "vx/gts-jsdoc": "off"
   }
