--- a/libs/pdi-rs/Cargo.toml
+++ b/libs/pdi-rs/Cargo.toml
@@ -30,6 +30,7 @@ crossterm = "0.27.0"
 image = { version = "0.24.7", default-features = false, features = [
     "bmp",
     "jpeg",
+    "png",
 ] }
 nom = "7.1.3"
 psutil = "3.3.0"
